# openclc

./: .gitignore  README.md  build  build-deps.sh  build-openclc.sh  cc-opts  host-opts  install.sh  release.sh
.github/workflows/: release.yaml
SPIRV-Tools/: CHANGES  CMakeLists.txt
clang/: CMakeLists.txt
examples/: .gitignore  Makefile  vec_add.c  vec_add.cl  vec_add_raw_opencl.c
examples/vec_add_no_rt/: build.zig  vec_add.c
examples/vec_add_rt/: build.zig  build.zig.zon  vec_add.c  vec_add.cl  vec_add.cl.gen.c
openclc/: CMakeLists.txt  DeviceFrontendDiagnosticPrinter.cpp  DeviceFrontendDiagnosticPrinter.h  opencl_headers.zig  openclc.cpp  openclc.hpp
runtime/: openclc_rt.c  openclc_rt.h
